--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -8,3 +8,15 @@
         box-shadow: 0px 0px 4px 0px abstracts.$shadow;
     }
 }
+
+.log-out-btn {
+    border: none;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    background: transparent;
+    color: abstracts.$light-text;
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+}
