lägger till hover-effekt på knapparna

--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -6,6 +6,10 @@
     .btn {
         @include abstracts.button(abstracts.$header-color, abstracts.$light-text, 70%, 3rem, 0.5em auto, 100%, center, 1rem, false);
         box-shadow: 0px 0px 4px 0px abstracts.$shadow;
+
+        &:hover {
+            transform: scale(1.05);
+        }
     }
 }
 
