--- a/src/css/_abstracts.scss
+++ b/src/css/_abstracts.scss
@@ -47,7 +47,7 @@ $font-stack: 'Arial', sans-serif;
         border: none;
 
         &:hover {
-            background-color: #cecf94;
+            background-color: #feffc7;
             color: $black;
         }
     }
