styling på inläggs-boxarna

--- a/src/css/_pages.scss
+++ b/src/css/_pages.scss
@@ -1,8 +1,29 @@
 @use "abstracts";
 
-#posts {
+.post-box {
     @include abstracts.textBox(90%, 1rem 1.5rem, 1rem auto, 0px 0px 8px 0px abstracts.$shadow, 1px solid abstracts.$shadow);
     background-color: abstracts.$white;
+
+    h3 {
+        font-size: 1.2em;
+    }
+
+    .sign-date {
+        @include abstracts.grid(100%, 2);
+
+        .sign,
+        .date {
+            font-size: 0.9em;
+        }
+
+        .sign {
+            font-style: italic;
+        }
+
+        .date {
+            text-align: right;
+        }
+    }
 
     p {
         margin-bottom: 0.3rem;
