--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -20,7 +20,34 @@
     width: auto;
     background: transparent;
     color: abstracts.$light-text;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 700;
     cursor: pointer;
+}
+
+.link-row {
+    @include abstracts.grid(100%, 1);
+    gap: 0.1em;
+    justify-content: center;
+
+    .link-btn {
+        @include abstracts.button(abstracts.$header-color, abstracts.$light-text, 50%, 3rem, 0.5em auto, 100%, center, 0.9rem, false);
+        text-decoration: none;
+        box-shadow: 0px 0px 4px 0px abstracts.$shadow;
+        padding: 0.7em;
+
+        &:hover {
+            transform: scale(1.05);
+        }
+    }
+}
+
+@media (min-width: 50rem) {
+    .log-out-btn {
+        font-size: 1rem;
+    }
+
+    .link-btn {
+        font-weight: 700;
+    }
 }
