--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -23,13 +23,13 @@ nav {
     li {
         list-style: none;
         display: inline;
-        padding-right: 1.5rem;
+        padding-right: 1rem;
     }
 
     a {
         text-decoration: none;
         color: abstracts.$light-text;
-        font-size: 1rem;
+        font-size: 0.8rem;
         font-weight: 700;
     }
 }
@@ -44,5 +44,13 @@ h1 a:hover {
     .container {
         max-width: 50rem;
         margin: 0 auto;
+    }
+
+    li {
+        padding-right: 1.5rem;
+
+        a {
+            font-size: 1rem;
+        }
     }
 }
