--- a/src/css/_pages.scss
+++ b/src/css/_pages.scss
@@ -35,6 +35,16 @@
     background-color: abstracts.$white;
 }
 
+#welcome-msg {
+    font-size: 1.5em;
+    margin: 1em auto 0.2em;
+}
+
+#user-info {
+    font-size: 0.8em;
+    text-align: center;
+}
+
 #ingress {
     text-align: center;
     font-weight: 600;
